# topobuilder

./: .gitattributes  .gitignore  MANIFEST.in  README.rst  REQUIREMENTS  __init__.py  __main__.py  setup.cfg  setup.py  topoIO.py  tox.ini  utils.py
RosettaIO/: __init__.py
RosettaIO/loops/: Loops.py  __init__.py
ci/: requirements_devel.txt  requirements_docs.txt  requirements_test.txt
demo/: .gitignore  .topobuilder.cfg  corrections.yml  input.json  run.sh
demo/protocols/: motif_3ixt_protocol.yml  motif_3o41_protocol.yml  motif_3vtt_protocol.yml  motif_4jhw_protocol.yml  motif_5tpn_protocol.yml
docs/: conf.py  current_plugins.rst  glossary.rst  references.bib
form/: FakeForm.py  Form.py  FormFabric.py  SecondaryStructure.py  VisualForms.py
interfaces/: backend.py  frontend.py
interfaces/frontend/: .bowerrc  clean.sh  index.html
interfaces/services/: TopobuilderServer.py  __init__.py
templates/: button-info.html  ffl.commands  footer.html  header.html
tests/case/: test_cases.py
tests/data/: test_minimal.json  test_minimal.yml
tests/io/: _test_cases.py
topobuilder/: __init__.py  __main__.py  _version.py  topoIO.py  utils.py
topobuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
topobuilder/actions/: __init__.py  builder.py  protocol.py  reverse.py
topobuilder/case/: __init__.py  case.py  schema.py  utils.py
topobuilder/coordinates/: __init__.py  architects.py  parametric.py
topobuilder/core/: __init__.py  (+1 more)
virtual/: VirtualBeta.py  VirtualHelix.py  VirtualHelix_fullatom.py  VirtualReverse.py  VirtualStructure.py
(+118 files in other folders)
